week03 httpserver: 1. muti-stage build to reduce image size https://docs.docker.com/develop/develop-images/multistage-build/ https://blog.alexellis.io/mutli-stage-docker-builds/

--- a/week3/Dockerfile
+++ b/week3/Dockerfile
@@ -1,6 +1,12 @@
+FROM golang:1.17 as builder
+
+WORKDIR /httpserver
+COPY . .
+RUN GOPROXY=https://goproxy.cn make build
+
 FROM ubuntu
+WORKDIR /app
+COPY --from=builder /httpserver/bin/ ./bin
 
-COPY ./bin /bin
-
-ENTRYPOINT ["/bin/amd64/httpserver"]
+ENTRYPOINT ["./bin/amd64/httpserver"]
 
